# essentials-of-compilation-python-version

./: .gitignore  README.md  pyproject.toml
src/essentials_of_compilation/: __init__.py  ch1.py  ch2.py  hello.py
