[project]
name = "essentials-of-compilation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shubham Kumar", email = "kumar.shubham.off@gmail.com" }
]
dependencies = [
    "black>=23.10.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
my-hello-script = 'essentials_of_compilation.hello:main'